# choiz-ga4-mcp

./: .env.example  .gitignore  README.md  SECURITY.md  claude-config-template.json  pyproject.toml  setup.bat  setup.sh
ga4_mcp/: server.py
ga4_mcp/tools/: reporting.py
