[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choiz-ga4-mcp"
version = "2.0.1-choiz1"
description = "Choizapp fork of google-analytics-mcp: GA4 MCP server with security fixes and Windows setup. Based on surendranb/google-analytics-mcp."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Surendran B", email = "reachsuren@gmail.com"},
    {name = "Choizapp"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "google-analytics-data==0.19.0",
    "google-auth==2.40.0"
]
keywords = ["google-analytics", "mcp", "mcp-server", "ai-agent", "analytics", "ga4", "agentic-workflows", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Choizapp/choiz-ga4-mcp"
Repository = "https://github.com/Choizapp/choiz-ga4-mcp"
Issues = "https://github.com/Choizapp/choiz-ga4-mcp/issues"
Upstream = "https://github.com/surendranb/google-analytics-mcp"

[project.scripts]
ga4-mcp-server = "ga4_mcp.server:main"

[tool.setuptools]
packages = ["ga4_mcp", "ga4_mcp.tools"]
